v1.4.0 (2016-04-05)
- Rework screensaver selection and download support
- Allow custom target download folder to be set
- Allow downloaded videos to be disabled from the screensaver selection
- Add support for installing custom collections
- Support cancel of downloads
- Tidy up import, globals and plugin provides

v1.3.0 (2016-01-28)
- Add support for scheduling by day

v1.2.1 (2015-10-16)
- Add option to shutdown after the screensaver is automatically stopped
- Search sub-directories when custom folder location selected

v1.2.0 (2015-08-12)
- Add scheduled video option
- Add option to launch the screensaver on startup
- Fix random start point always being 5 seconds from the end

v1.1.8 (2015-07-23)
- Switch default downloads to server kindly provided by Ziggy
- Add additional screensavers
- Add clock screensaver support

v1.1.7 (2015-06-22)
- Prevent possible deadlock while background media is playing

v1.1.6 (2015-05-28)
- Add option to use Audio Engine Suspend for disabling volume

v1.1.5 (2015-05-14)
- Support running the screensaver as a script

v1.1.4 (2015-05-10)
- Fix Ocean 1 download

v1.1.3 (2015-05-06)
- Add additional Aquarium, Christmas, Johnny Castaway and Ocean screensavers

v1.1.2 (2015-05-01)
- Add option to reset volume on startup

v1.1.1 (2015-04-20)
- Set variable when VideoScreensaver is running so other addons know about it

v1.1.0 (2015-03-11)
- Add option to set an overlay image

v1.0.9 (2015-03-09)
- Fix issue where existing screensaver file is never over-written
- Add message if sceeensaver video failed to download correctly
- Add Snow and Watermill screensavers

v1.0.8 (2015-02-13)
- Add additional beach, matrix, sci-fi, space, waterfall and woodland screensavers
- Add special check to see if TvTunes is still running

v1.0.7 (2015-01-30)
- Move screensaver videos to different host
- Add beach and space screensaver

v1.0.6 (2015-01-15)
- Add option to stop the screensaver after a set amount of time